--- a/style.css
+++ b/style.css
@@ -1,4 +1,14 @@
-
+body{
+    background-color:#3f3f41;
+    color:white;
+}
+.input{
+    display: inline-block;
+    vertical-align: top;
+}
+.output{
+    display: inline-block;
+}
 table, td, th {
     border: 1px solid #ddd;
     text-align: center;
