--- a/style.css
+++ b/style.css
@@ -1,12 +1,34 @@
 body{
     background-color:#3f3f41;
     color:white;
+    padding-top: 1em;
+}
+input[type=text] {
+    color: white;
+    font-size: 1em;
+    text-align: center;
+    padding: 0.4em;
+    background-color: #535355;
+    border: 1px solid white;
+    border-radius: 6px;
+}
+input[type=submit]{
+    margin-top: 2em;
+    background-color: #77ad35;
+    border: none;
+    border-radius: 6px;
+    font-size: 0.9em;
+    font-weight: bold;
+    text-align: center;
+    padding: 0.9em;
+    color: white;
+    text-transform: uppercase;
 }
 .input{
     padding-left: 2.5em;
     display: inline-block;
     vertical-align: top;
-    background: url('assets/input.png') no-repeat 0.5em 0px;
+    background: url('assets/input.png') no-repeat 0.5em 5px;
 }
 .input span{
     font-size: 0.9em;
@@ -24,10 +46,13 @@ table, td, th {
 }
 
 table {
-    border-collapse: collapse;
+    border: none;
+    border-spacing: 0;
 }
 
 th, td {
+    margin: 0;
+    border-radius: 4px;
     width: 2.5em;
     height: 2.5em;
 }
