--- a/style.css
+++ b/style.css
@@ -51,8 +51,24 @@ table {
 }
 
 th, td {
+    position: relative;
     margin: 0;
     border-radius: 4px;
     width: 2.5em;
     height: 2.5em;
+}
+.left{
+
+}
+.down{
+
+}
+.right::before{
+    color: white ;
+content: "→";
+    left: 70%;
+    position: absolute;
+}
+.up{
+
 }
